--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,7 +1,7 @@
 .lead {
   max-width: 984px;
   margin: 0 auto;
-  padding: 50px 148px 92px;
+  padding: 50px 0 92px;
 }
 
 @media (max-width: 1024px) {
@@ -10,7 +10,7 @@
   }
 }
 
-@media (max-width: 984px) {
+@media (max-width: 768px) {
   .lead {
     padding: 40px 0 92px;
   }
