--- a/blocks/cover/_margin/cover_margin_bottom.css
+++ b/blocks/cover/_margin/cover_margin_bottom.css
@@ -1,9 +1,15 @@
 .cover_margin_bottom {
-  margin-bottom: 79px;
+  margin-bottom: 92px;
 }
 
 @media (max-width: 768px) {
   .cover_margin_bottom {
-    margin-bottom: 70px;
+    margin-bottom: 85px;
+  }
+}
+
+@media (max-width: 320px) {
+  .cover_margin_bottom {
+    margin-bottom: 64px;
   }
 }
