--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,20 +4,26 @@
   align-items: center;
   max-width: 1184px;
   margin: auto;
-  padding: 0 48px 24px;
+  padding: 92px 48px 24px;
 }
 
-@media (max-width: 768px) {
-  .footer {
-    padding: 0 24px 24px;
+@media (max-width: 1000px) {
+  .footer  {
+    padding: 84px 24px 24px;
   }
 }
 
 @media (max-width: 720px) {
-  .footer {
+  .footer  {
     min-height: 310px;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0 118px 24px 16px;
   }
 }
+
+@media (max-width: 320px) {
+  .footer  {
+    padding: 64px 24px 24px;
+  }
+}
+
