--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -2,6 +2,9 @@
   grid-area: text;
   font-size: 18px;
   line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  row-gap: 26px;
 }
 
 @media (max-width: 768px) {
